# internproject

./: .env  README.md  pyproject.toml  requirements.txt
docs/: configuration.md  getting_started.md  order_types.md
scripts/: run_bot.sh
src/binance_futures_bot/: cli.py  client.py  config.py  logging_config.py  main.py  types.py
src/binance_futures_bot/models/: order.py
src/binance_futures_bot/orders/: __init__.py  base.py  limit.py  market.py
src/binance_futures_bot/utils/: helpers.py
src/binance_futures_bot/validation/: __init__.py  validators.py
tests/: conftest.py  test_orders.py  test_validation.py
