[tool.poetry]
name = "binance-futures-cli-bot"
version = "0.1.0"
description = "A CLI-based trading bot for Binance USDT-M Futures."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
python-dotenv = "^0.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"